--- a/src/real_var_es_dashboard.ipynb
+++ b/src/real_var_es_dashboard.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "33032da5",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,10 @@
     "n_mc = config[\"n_mc\"]                   # Monte Carlo scenarios\n",
     "kpi_filename = config[\"KPI_filename\"]\n",
     "dashboard_name = config[\"dashboard_name\"]\n",
-    "ewma_lambda = config[\"ewma_lambda\"]     # Exponential Weighted Moving Average\n",
+    "ewma_lambda = config[\"ewma_lambda\"]     \n",
+    "k = config[\"volatility_stress_factor\"] \n",
+    "delta_rho = config[\"correlation_stress_factor\"] \n",
+    "\n",
     "prices_xlsx = \"prices.xlsx\"   \n",
     "positions_xlsx = \"positions.xlsx\"  \n",
     "\n",
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "f9162880",
    "metadata": {},
    "outputs": [],
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "b4ce5359",
    "metadata": {},
    "outputs": [],
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "1bc000b9",
    "metadata": {},
    "outputs": [],
@@ -490,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "ecbeaad2",
    "metadata": {},
    "outputs": [],
@@ -526,7 +529,7 @@
     "        sigma_p2 = self.w_norm @ sigma @ self.w_norm\n",
     "        return np.sqrt(sigma_p2)\n",
     "\n",
-    "    def volatility_stress(self, k: float = 2.0):\n",
+    "    def volatility_stress(self, k=k):\n",
     "        \"\"\"\n",
     "        Apply a volatility stress by scaling the covariance matrix:\n",
     "            Σ_stress = k^2 * Σ\n",
@@ -542,7 +545,7 @@
     "        sigma_p_stress = k * sigma_p_base\n",
     "        return sigma_stress, sigma_p_base, sigma_p_stress\n",
     "\n",
-    "    def correlation_stress(self, delta_rho: float = 0.2):\n",
+    "    def correlation_stress(self, delta_rho=delta_rho):\n",
     "        \"\"\"\n",
     "        Apply a correlation stress by increasing all correlations by delta_rho,\n",
     "        capped at 1.0.\n",
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "fc3762c7",
    "metadata": {},
    "outputs": [],
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "19b8c677",
    "metadata": {},
    "outputs": [],
@@ -735,7 +738,7 @@
     "        font=dict(color=\"purple\")\n",
     "    )\n",
     "\n",
-    "    # ---------------- Row 1: Monte Carlo VaR & ES ----------------\n",
+    "    # Row 1: Monte Carlo VaR & ES\n",
     "    fig.add_trace(\n",
     "        go.Histogram(\n",
     "            x=mc_losses,\n",
@@ -761,8 +764,8 @@
     "        font=dict(color=\"purple\")\n",
     "    )\n",
     "\n",
-    "    # ---------------- Row 2: Enhanced Exposure Weights Plot ----------------\n",
     "\n",
+    "    # Row 2: Enhanced Exposure Weights Plot \n",
     "    # 1. Sort exposure weights ascending for better readability\n",
     "    sorted_items = sorted(exposure_weights.items(), key=lambda x: x[1])\n",
     "    inst_names = [item[0] for item in sorted_items]\n",
@@ -890,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "38dc87a0",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1013,7 @@
     "        mc_losses=mc_losses,\n",
     "        mc_var=mc_var,\n",
     "        mc_es=mc_es,\n",
-    "        #exposure_weights=exposure_weights,\n",
+    "        exposure_weights=exposure_weights,\n",
     "        metrics=results,\n",
     "        html_path=DASHBOARD_HTML\n",
     "    )\n",
@@ -1023,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "4d912979",
    "metadata": {},
    "outputs": [
