--- a/src/real_var_es_dashboard.ipynb
+++ b/src/real_var_es_dashboard.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33032da5",
    "metadata": {},
    "outputs": [],
@@ -168,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "f9162880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ewma_covariance(returns_df: pd.DataFrame, lambda_: float = EWMA_LAMBDA) -> np.ndarray:\n",
+    "def ewma_covariance(returns_df: pd.DataFrame, lambda_: float = ewma_lambda) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Compute the EWMA covariance matrix.\n",
     "    Recursion:\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "b4ce5359",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
     "    - Monte Carlo VaR/ES using EWMA covariance and simulated returns.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, portfolio: Portfolio, alpha: float = ALPHA):\n",
+    "    def __init__(self, portfolio: Portfolio, alpha: float = alpha):\n",
     "        self.portfolio = portfolio\n",
     "        self.alpha = alpha\n",
     "        # Returns matrix and loss series are computed once and reused\n",
@@ -316,7 +316,7 @@
     "\n",
     "    # ---------------- Monte Carlo VaR & ES (EWMA) ----------------\n",
     "\n",
-    "    def monte_carlo_var_es(self, n_scenarios: int = N_MC):\n",
+    "    def monte_carlo_var_es(self, n_scenarios: int = n_mc):\n",
     "        \"\"\"\n",
     "        Monte Carlo VaR & ES using EWMA covariance:\n",
     "\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "1bc000b9",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
     "        I_t = 1 if Loss_t > VaR_t, else 0\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, loss_series: pd.Series, var_series: pd.Series, alpha: float = ALPHA):\n",
+    "    def __init__(self, loss_series: pd.Series, var_series: pd.Series, alpha: float = alpha):\n",
     "        self.loss_series = loss_series\n",
     "        self.var_series = var_series\n",
     "        self.alpha = alpha\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ecbeaad2",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
     "        Returns:\n",
     "            np.ndarray: covariance matrix.\n",
     "        \"\"\"\n",
-    "        return ewma_covariance(self.returns_df, lambda_=EWMA_LAMBDA)\n",
+    "        return ewma_covariance(self.returns_df, lambda_=ewma_lambda)\n",
     "\n",
     "    def base_portfolio_vol(self) -> float:\n",
     "        \"\"\"\n",
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "fc3762c7",
    "metadata": {},
    "outputs": [],
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "19b8c677",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
     "                    mc_es: float,\n",
     "                    exposure_weights: dict,\n",
     "                    metrics: dict,\n",
-    "                    html_path: str = DASHBOARD_HTML):\n",
+    "                    html_path: str = dashboard_name):\n",
     "    \"\"\"\n",
     "    Build and save the Plotly HTML dashboard.\n",
     "\n",
@@ -837,7 +837,7 @@
     "    )\n",
     "\n",
     "    fig.update_yaxes(\n",
-    "        title_text=\"Weight (%)\",\n",
+    "        title_text=\"Weight\",\n",
     "        row=2, col=1\n",
     "    )\n",
     "\n",
@@ -874,9 +874,9 @@
     "    )\n",
     "\n",
     "    # Axis labels for histograms\n",
-    "    fig.update_xaxes(title_text=\"Loss (%)\", row=1, col=1)\n",
-    "    fig.update_xaxes(title_text=\"Loss (%)\", row=1, col=2)\n",
-    "    fig.update_xaxes(title_text=\"Loss (%)\", row=1, col=3)\n",
+    "    fig.update_xaxes(title_text=\"Loss\", row=1, col=1)\n",
+    "    fig.update_xaxes(title_text=\"Loss\", row=1, col=2)\n",
+    "    fig.update_xaxes(title_text=\"Loss\", row=1, col=3)\n",
     "    fig.update_yaxes(title_text=\"Frequency\", row=1, col=1)\n",
     "\n",
     "    # Write dashboard to HTML file\n",
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "38dc87a0",
    "metadata": {},
    "outputs": [],
@@ -944,7 +944,7 @@
     "    port_losses = portfolio.portfolio_loss_series()\n",
     "\n",
     "    # 6. VaR & ES calculations\n",
-    "    var_calc = VaRCalculator(portfolio=portfolio, alpha=ALPHA)\n",
+    "    var_calc = VaRCalculator(portfolio=portfolio, alpha=alpha)\n",
     "\n",
     "    # Historical VaR & ES\n",
     "    hist_var = var_calc.historical_var()\n",
@@ -956,11 +956,11 @@
     "    para_es = var_calc.parametric_es()\n",
     "\n",
     "    # Monte Carlo VaR & ES (EWMA)\n",
-    "    mc_var, mc_es, mc_losses = var_calc.monte_carlo_var_es(N_MC)\n",
+    "    mc_var, mc_es, mc_losses = var_calc.monte_carlo_var_es(n_mc)\n",
     "\n",
     "    # 7. Backtesting using Historical VaR\n",
     "    var_series_hist = pd.Series(hist_var, index=port_losses.index, name=\"VaR_Hist\")\n",
-    "    backtester_hist = Backtester(loss_series=port_losses, var_series=var_series_hist, alpha=ALPHA)\n",
+    "    backtester_hist = Backtester(loss_series=port_losses, var_series=var_series_hist, alpha=alpha)\n",
     "    kupiec_LR, kupiec_p, N_exc, T_obs = backtester_hist.kupiec_pof_test()\n",
     "    christ_LR, christ_p, trans_counts = backtester_hist.christoffersen_independence_test()\n",
     "\n",
@@ -1001,7 +1001,7 @@
     "        results[f\"{name}_weight\"] = w\n",
     "\n",
     "    # Append results to Excel log\n",
-    "    append_results_to_excel(results, RESULTS_EXCEL)\n",
+    "    append_results_to_excel(results, kpi_filename)\n",
     "\n",
     "    # 11. Build and save the dashboard\n",
     "    build_dashboard(\n",
@@ -1015,18 +1015,18 @@
     "        mc_es=mc_es,\n",
     "        exposure_weights=exposure_weights,\n",
     "        metrics=results,\n",
-    "        html_path=DASHBOARD_HTML\n",
+    "        html_path=dashboard_name\n",
     "    )\n",
     "\n",
     "    print(\"Computation complete.\")\n",
-    "    print(f\"Dashboard saved to: {DASHBOARD_HTML}\")\n",
-    "    print(f\"Results appended to: {RESULTS_EXCEL}\")\n",
+    "    print(f\"Dashboard saved to: {dashboard_name}\")\n",
+    "    print(f\"Results appended to: {kpi_filename}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "4d912979",
    "metadata": {},
    "outputs": [
@@ -1035,8 +1035,8 @@
      "output_type": "stream",
      "text": [
       "Computation complete.\n",
-      "Dashboard saved to: Electricity_Risk_Report.html\n",
-      "Results appended to: risk_results.xlsx\n"
+      "Dashboard saved to: electricity_risk_report.html\n",
+      "Results appended to: KPI.xlsx\n"
      ]
     }
    ],
